# nupi

./: .gitignore  Makefile  README.md  go.mod  go.sum  install.sh
.github/workflows/: frontend-shared-checks.yml
clients/desktop/: .gitignore  buf.gen.yaml  buf.yaml  index.html  package-lock.json  package.json
clients/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: grpc_client.rs  installer.rs  lib.rs  proto.rs  rest_client.rs  settings.rs  timeouts.rs
clients/mobile/: .gitignore  README.md  app.json  buf.gen.yaml  eas.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
clients/shared/: errors.d.ts  errors.js  events.d.ts  events.js  package.json  utils.d.ts  utils.js
cmd/adapter-runner/: main.go
cmd/nupi/: adapters.go  adapters_logs_test.go  adapters_test.go  config.go  daemon.go  heartbeat.go  heartbeat_test.go  helpers.go  helpers_test.go  login.go  main.go  main_test.go  marketplace.go  modules_logs_test.go  plugins.go  prompts.go  quickstart.go  quickstart_helpers_test.go  sessions.go  signal_unix.go  signal_windows.go  testmain_test.go  version.go  version_test.go  voice.go  voice_test.go
cmd/nupid/: main.go
internal/adapterrunner/: manager.go  manager_test.go  sync.go  sync_test.go  testhelpers_test.go
internal/api/: conversation.go  dto.go
internal/audioio/: wav.go  wav_test.go
internal/awareness/: chunker.go  chunker_test.go  conversation_log.go  conversation_log_test.go  core_memory.go  core_memory_test.go  embedding.go  embedding_test.go  flush.go  heartbeat.go  heartbeat_test.go  hybrid.go  hybrid_test.go  indexer.go  indexer_test.go  journal.go  journal_test.go  onboarding_test.go  rolling_log.go  rolling_log_test.go  scaffolds.go  scaffolds_test.go  search.go  search_test.go  service.go  service_test.go  session_export.go  tools.go  tools_test.go  types.go
internal/bootstrap/: bootstrap.go
internal/client/: audio.go  audio_test.go  client.go  config.go  http_client.go  settings.go
internal/config/: paths.go  paths_test.go
internal/constants/: adapters.go  auth.go  collections.go  metadata.go  notifications.go  plugins.go  prompts.go  sessions.go  timeouts.go
internal/contentpipeline/: buffer.go  buffer_test.go  service.go  service_test.go
internal/conversation/: global.go  global_test.go  service.go  service_test.go
internal/daemon/: daemon.go  (+9 more)
scripts/: download-bun.sh
(+529 files in other folders)
